Fixed rating star styling on mobile.

--- a/app/assets/stylesheets/pictures.css.scss
+++ b/app/assets/stylesheets/pictures.css.scss
@@ -22,7 +22,7 @@
 
   .picture {
     @media (max-width: 768px) {
-      img {
+      .image img {
         width: 100%;
       }
     }
